# a-share-alpha-forge

./: .gitignore  .gitmodules  CLAUDE.md  README.md  pyproject.toml
docs/: ARCHITECTURE.md  CAPABILITY_GUIDE.md  DEVELOPMENT.md  HARNESS.md
harness/: __init__.py  manifest.json  runner.py
scripts/: a_share_data.py  ensure_fresh.py  local_hist.py  run_harness.py  stock_workbench.py  update_hist.py
tests/: conftest.py  test_daily_a_share_scripts.py  test_data_cache_and_parsing.py  test_harness.py  test_industry_chain_scripts.py  test_integrated_stock_selection.py  test_iwencai_trend_stock_pool.py  test_stock_workbench_selection.py
tmp/: 002281_financial.json  300308_analysis.json  300308_financial.json  600030_financial.json  600111_analysis.json  600111_financial.json  600487_financial.json  601869_financial.json  603993_financial.json  a-share-brief-assembled-institutional-smoke.json  a-share-brief-assembled-rerun.json  a-share-brief-assembled-smoke.json  a-share-brief-assembled.json  a-share-brief-bundle-enriched.json  a-share-brief-bundle.json  a-share-brief-report-rerun-20260612.md  a-share-brief-report-rerun.md  a-share-brief-report.md  a-share-optional-sources-rerun-20260612.json  a-share-trading-calendar-smoke.json  a_share_candidates_bundle_bzq7viov.json  a_share_optional_probe_300750_basic.json  a_share_sector_candidates_bundle_dfipghko.json  a_share_stocks_bundle_w4m_gqo4.json  price_analysis_summary.json  sample_quote_300308.json  snapshot_2026-06-22.json  stock_data_300308_financial.json  stock_data_300308_valuation.json  test_300308_basic.json  (+5 more)
(+610 files in other folders)
