[project]
name = "stock-analysis"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "adata>=2.9.5",
    "akshare>=1.18.64",
    "backtrader>=1.9.78.123",
    "baostock>=0.9.2",
    "cairosvg>=2.9.0",
    "efinance>=0.5.8",
    "mootdx>=0.11.7",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pdfplumber>=0.11.10",
    "pyfolio>=0.9.2",
    "pypdf>=6.14.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pyyaml>=6.0.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = [".venv", "tmp", "__pycache__"]
